Fix horizontal scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ html { overflow-y: scroll; overflow-x:hidden; }
 body { position: absolute; }
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 10px;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-track {
@@ -17,6 +18,6 @@ body { position: absolute; }
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 8px;
+    border-radius: 16px;
     background-color: #ff0d6ea2;
 }
